# dont_panic

./: CMakeLists.txt  LICENSE  README.md
computeChecksums/: CMakeLists.txt
computeChecksums/src/: computeChecksums.cpp  crc32.h
cryptor/: CMakeLists.txt
cryptor/src/: cryptor.cpp
encryptFunctions/: CMakeLists.txt
encryptFunctions/src/: encryptFunctions.cpp
fakeHeadersXBit/: CMakeLists.txt
fakeHeadersXBit/src/: .fakeHeaders.cpp.kate-swp  fakeHeadersXBit.cpp
madvise/: CMakeLists.txt
madvise/src/: madvise.cpp
stripBinary/: CMakeLists.txt
stripBinary/src/: stripBinary.cpp
trouble/: CMakeLists.txt  trouble_layout.lds
trouble/src/: crc32.c  rc4.c  rc4.h  trouble.c  xor_string.h
